# AXIOM

./: .env.example  .gitignore  AXIOM_Comprehensive_Architecture.txt  DEPLOYMENT.md  README.md  api_logs.txt  check-health.ps1  design.md  docker-compose.yml  ivcu_id.txt  logs.txt  package-lock.json  package.json  project_id.txt  requirements.md  setup_env.bat  start-dev.ps1  start_axiom.bat  start_backend.bat  start_frontend.bat  test_api.ps1  token.txt  turbo.json  verify_events.py  verify_hardening.py  verify_intelligence.py  verify_output.txt  verify_phase8.ps1  verify_policy.py  verify_sdo.ps1
.agent/rules/: rulesmd.md
.agent/workflows/: add-api-endpoint.md  add-ivcu-feature.md  dev-setup.md  new-component.md  new-service.md  restore-context.md  test-and-verify.md
.gemini/: rules.md
.github/workflows/: ci.yml  deploy.yml  test.yml
apps/api/: .golangci.yml  Dockerfile  go.mod  go.sum
apps/web/: App.backup.tsx  App.tsx  Dockerfile  README.md  index.css  index.html  index.tsx  metadata.json  next.config.js  package-lock.json  package.json  tailwind.config.js  test_output.txt  test_output_jsdom.txt  tsconfig.tsbuildinfo  types.ts  (+1 more)
apps/web-next/: Dockerfile  lint_errors.txt  next.config.ts  package.json
services/verifier/: Cargo.toml  Dockerfile  build.rs  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_python.txt  build_log_stub.txt  build_log_t2.txt  verifier_stub.py
services/verifier/proto/: verifier.proto
services/verifier/src/: formal.rs  main.rs  sandbox.rs
temp_web/: package-lock.json  package.json
tests/: e2e_graph_test.py
(+296 files in other folders)
