[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustpython-parser = "0.3.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }


[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"
