[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

# Removed native deps to fix Windows build environment issues (running in Mock Mode)
# wasmtime = "18.0.0" 
# z3 = ...

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"
